2005-07-19  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wingdi.h (SYSPAL_NOSTATIC256): Define.

2005-07-19  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wingdi.h (WINGDIAPI): Define to DECLSPEC_DLLIMPORT
	if __W32API_USE_DLLIMPORT__.   Use throughout to qualify
	prototypes.

2005-07-19  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/commctrl.h (RBBS_USECHEVRON): Define.
	(RBBS_*): Use hex notation, group together.

2005-07-18  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/kernel32.def (GetUserGeoID): Correct suffix.
	Thanks to: "bernd23" <bernd23 at users dot sourceforge dot net>

2005-07-18  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/commctrl.h (TreeView_SetItemState): Initilise
	_tvi.hItem.
	Thanks to:  Joseph Remes <jremes at users dot sourceforge dot net>

2005-07-18  Mattia Barbon  <mbarbon@users.sourceforge.net>

	* include/commctrl.h (NMLVFINDITEM): Add structure.

2005-07-18  Michael Gerdau  <mgdde@users.sourceforge.net>

	* include/wininet.h (WININET_API_FLAG_*): Add defines.

2005-07-18  Daniel Atallah  <datallah@users.sourceforge.net>

	* include/winnt.h (VER_SET_CONDITION): Define.

2005-07-18  Michael Gerdau  <mgdde@users.sourceforge.net>

	* include/wincon.h (AttachConsole): Correct _WIN32_WINNT guard.
	(ATTACH_PARENT_PROCESS): Define.
	(CONSOLE_WINDOWED_MODE): Correct definition to match MSDN
	documentation.

2005-07-17  Benoit Blanchon  <bblanchon@users.sourceforge.net>

	* include/winbase.h (QueueUserWorkItem): Add prototype.

2005-07-13  Benoit Blanchon  <bblanchon@users.sourceforge.net>

	* include/wingdi.h (SHADEBLENDCAPS, SB_NONE, SB_CONST_ALPHA,
	SB_PIXEL_ALPHA, SB_PREMULT_ALPHA, SB_GRAD_RECT, SB_GRAD_TRI,
	COLORMGMTCAPS, CM_NONE, CM_DEVICE_ICM, CM_GAMMA_RAMP,
	CM_CMYK_COLOR): Define.

2005-06-19  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winldap.h (ldap_simple_bindW, ldap_simple_bind_sW,
	ldap_bindW, ldap_bind_sW): Change PCHAR arg to PWCHAR.